<resources>
    <string name="app_name">TbyPlayGround</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="recognition_wall">Recognition Wall</string>
    <string name="menu_menu_profile">My Profile</string>
    <string name="menu_menu_app_settings">Settings\n</string>
    <string name="menu_logout">Logout</string>
    <string name="user">Terryberry User</string>
</resources>