<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/home_navigation_wall"
            android:icon="@drawable/home"
            android:iconTintMode="src_atop"
            android:title="@string/recognition_wall" />

        <item
            android:id="@+id/home_navigation_profile"
            android:icon="@drawable/account_placeholder"
            android:iconTintMode="src_atop"
            android:title="@string/menu_menu_profile" />

        <item
            android:id="@+id/home_navigation_settings"
            android:icon="@drawable/app_settings"
            android:iconTintMode="src_atop"
            android:title="@string/menu_menu_app_settings" />

        <item
            android:id="@+id/home_navigation_logout"
            android:icon="@drawable/logout"
            android:iconTintMode="src_atop"
            android:title="@string/menu_logout" />
    </group>
</menu>