<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_navigation_wall">

    <fragment
        android:id="@+id/home_navigation_wall"
        android:name="com.example.tbyplayground.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/home_navigation_profile"
        android:name="com.example.tbyplayground.ui.profile.ProfileFragment"
        android:label="@string/menu_menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/home_navigation_settings"
        android:name="com.example.tbyplayground.ui.settings.SettingsFragment"
        android:label="@string/menu_menu_app_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>